--- a/src/styles/spade/typography.less
+++ b/src/styles/spade/typography.less
@@ -1,3 +1,16 @@
+html { 
+  font-size: 70.83%;
+}
+body {
+  font-size: 1.85em; 
+  line-height: 1.6;
+  font-family: @font-family;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
+
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
@@ -68,12 +81,36 @@ code {
   margin: 0 .2rem;
   font-size: 90%;
   white-space: nowrap;
-  background: @bg-color--subtle;
-  border: 1px solid @border-color--subtle;
   border-radius: 4px; 
 }
 pre > code {
   display: block;
   // padding: 1rem 1.5rem;
   white-space: pre; 
+}
+
+
+body > header {
+  & > * {
+    font-size: 1.9rem; 
+    line-height: 1.5;
+  }
+}
+
+body > aside {
+  font-size: 1.3rem;
+
+  h3 { 
+    font-size: 1.4rem; 
+    line-height: 1.8;
+    margin: 0;
+  }
+}
+
+
+/* Larger than desktop */
+@media (min-width: @bp-larger-than-desktop) {
+  body {
+    font-size: 1.5em;
+  }
 }
