re-org and clean up bases

--- a/src/styles/loam/elements/form.less
+++ b/src/styles/loam/elements/form.less
@@ -49,7 +49,7 @@ legend {
   padding: 0.2rem 0;
   font-size: 2rem;
   width: 100%;
-  border-bottom: 1px solid @border-color--subtle;
+  // border-bottom: 1px solid @border-color--subtle;
 }
 
 form > footer {
@@ -71,17 +71,17 @@ input[type="button"] {
   height: 38px;
   padding: 0 30px;
   margin-right: 1rem;
-  color: @secondary-color;
+  // color: @secondary-color;
   text-align: center;
   font-size: 1.8rem;
   line-height: 1.6rem;
   letter-spacing: .1rem;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  background-color: transparent;
-  border-radius: @base-radius;
-  border: 1px solid @border-color;
+  // background-color: transparent;
+  // border-radius: @border-radius;
+  // border: 1px solid @border-color;
   cursor: pointer;
   box-sizing: border-box;
 }
@@ -93,7 +93,7 @@ buttons and input elements
 ================================================
 */
 .button, button, input, optgroup, select, textarea {
-  color: @text-color--loud;
+  // color: @text-color--loud;
 }
 .button, button, input, optgroup, select, textarea, fieldset {
   margin-bottom: 1.5rem;
@@ -116,12 +116,12 @@ input[type="url"],
 input[type="password"],
 textarea,
 select {
-  border: 1px solid @border-color--subtle;
-  background-color: transparent;
+  // border: 1px solid @border-color--subtle;
+  // background-color: transparent;
   padding: 1.5px 3px;
   height: 3.2rem;
   width: 100%;
-  border-radius: 4px;
+  // border-radius: @border-radius;
   font-size: 2rem;
 }
 
@@ -130,9 +130,9 @@ button.button--primary,
 input[type="submit"].button--primary,
 input[type="reset"].button--primary,
 input[type="button"].button--primary {
-  color: @text-color--loud;
-  background-color: #288edf;
-  border-color: #134f7f; 
+  // color: @text-color--loud;
+  // background-color: #288edf;
+  // border-color: #134f7f; 
 }
 .button.button--primary:hover,
 button.button--primary:hover,
@@ -144,9 +144,9 @@ button.button--primary:focus,
 input[type="submit"].button--primary:focus,
 input[type="reset"].button--primary:focus,
 input[type="button"].button--primary:focus {
-  color: @text-color--loud;
-  background-color: #4ca1e4;
-  border-color: #1EAEDB; 
+  // color: @text-color--loud;
+  // background-color: #4ca1e4;
+  // border-color: #1EAEDB; 
 }
 
 button[disabled],
@@ -163,8 +163,8 @@ button.button--primary[disabled],
 input[type="submit"][disabled].button--primary,
 input[type="reset"][disabled].button--primary,
 input[type="button"][disabled].button--primary {
-  background-color: #288edf;
-  border-color: #134f7f;
+  // background-color: #288edf;
+  // border-color: #134f7f;
 }
 .button.button--primary[disabled]:hover,
 button.button--primary[disabled]:hover,
@@ -176,8 +176,8 @@ button.button--primary[disabled]:focus,
 input[type="submit"][disabled].button--primary:focus,
 input[type="reset"][disabled].button--primary:focus,
 input[type="button"][disabled].button--primary:focus {
-  background-color: #288edf;
-  border-color: #134f7f;
+  // background-color: #288edf;
+  // border-color: #134f7f;
 }
 
 input[type="date"]:focus, 
@@ -191,8 +191,8 @@ input[type="tel"]:focus,
 input[type="url"]:focus, 
 input[type="password"]:focus, 
 textarea:focus, select:focus {
-  border: 1px solid #33C3F0;
-  outline: 0;
+  // border: 1px solid #33C3F0;
+  // outline: 0;
 }
 
 textarea {
