--- a/src/styles/loam/elements/table.less
+++ b/src/styles/loam/elements/table.less
@@ -7,7 +7,7 @@ table {
   td {
     padding: 12px 15px;
     text-align: left;
-    border-bottom: 1px solid @border-color--subtle;
+    // border-bottom: 1px solid @border-color--subtle;
   }
   th:first-child,
   td:first-child {
@@ -19,7 +19,7 @@ table {
   }
 
   tbody td {
-    color: @text-color--loud;
+    // color: @text-color--loud;
   }
 
   .fa {
