--- a/src/styles/loam/variables.less
+++ b/src/styles/loam/variables.less
@@ -34,6 +34,7 @@ VARIABLES
 @link-color: #3b8bba;
 @link-color--active: #0074d9;
 @link-color--hover: #0074d9;
+@link-color--visited: #999;
 
 // misc
-@base-radius: 4px;
+@border-radius: 0;
