--- a/src/styles/clay-light.less
+++ b/src/styles/clay-light.less
@@ -8,6 +8,6 @@
 
 @import 'topsoil/elements/form';
 @import 'topsoil/elements/table';
+@import 'topsoil/theme.less';
 // @import 'tags.less';
-// @import 'theme-dark.less';
 
